--- a/webstorm/pom.xml
+++ b/webstorm/pom.xml
@@ -104,6 +104,11 @@
 			<version>3.3.1</version>
 		</dependency>
 		<dependency>
+			<groupId>org.rometools</groupId>
+			<artifactId>rome-fetcher</artifactId>
+			<version>1.2</version>
+		</dependency>		
+		<dependency>
 			<groupId>net.sf.cssbox</groupId>
 			<artifactId>cssbox</artifactId>
 			<version>4.5</version>
