--- a/webstorm/pom.xml
+++ b/webstorm/pom.xml
@@ -109,6 +109,11 @@
 			<version>1.2</version>
 		</dependency>		
 		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.3.175</version>
+		</dependency>		
+		<dependency>
 			<groupId>net.sf.cssbox</groupId>
 			<artifactId>cssbox</artifactId>
 			<version>4.5</version>
