--- a/webstorm/pom.xml
+++ b/webstorm/pom.xml
@@ -116,7 +116,7 @@
 		<dependency>
 			<groupId>net.sf.cssbox</groupId>
 			<artifactId>cssbox</artifactId>
-			<version>4.5</version>
+			<version>4.6-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.cssbox</groupId>
