--- a/webstorm/pom.xml
+++ b/webstorm/pom.xml
@@ -124,6 +124,11 @@
 			<version>1.2</version>
 		</dependency>
 		<dependency>
+			<groupId>net.sf.cssbox</groupId>
+			<artifactId>jstyleparser</artifactId>
+			<version>1.16</version>
+		</dependency>
+		<dependency>
 			<groupId>cz.vutbr.fit.burgetr</groupId>
 			<artifactId>layout</artifactId>
 			<version>0.0.2-SNAPSHOT</version>
