--- a/webstorm/pom.xml
+++ b/webstorm/pom.xml
@@ -109,6 +109,11 @@
 			<version>3.0</version>
 		</dependency>
 		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>8.4-702.jdbc4</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.jena</groupId>
 			<artifactId>jena-tdb</artifactId>
 			<version>1.0.1</version>
