--- a/scheduler/pom.xml
+++ b/scheduler/pom.xml
@@ -14,6 +14,22 @@
           <target>1.7</target>
         </configuration>
       </plugin>
+      <plugin>
+		<artifactId>maven-assembly-plugin</artifactId>
+		<version>2.4</version>
+		<configuration>
+			<descriptorRefs>
+				<descriptorRef>jar-with-dependencies</descriptorRef>
+			</descriptorRefs>
+			<archive>
+				<manifest>
+					<mainClass>storm.ManualScheduler</mainClass>
+				</manifest>
+			</archive>
+			<finalName>scheduler</finalName>
+			<appendAssemblyId>true</appendAssemblyId>
+		</configuration>
+	</plugin>
     </plugins>
   </build>
   <dependencies>
@@ -21,7 +37,13 @@
 		<groupId>org.apache.storm</groupId>
 		<artifactId>storm-core</artifactId>
 		<version>0.9.1-incubating</version>
+		<scope>provided</scope>
 	</dependency>
-            
+
+  	<dependency>
+  		<groupId>postgresql</groupId>
+  		<artifactId>postgresql</artifactId>
+  		<version>8.4-702.jdbc4</version>
+  	</dependency>
   </dependencies>
 </project>
