--- a/scheduler/pom.xml
+++ b/scheduler/pom.xml
@@ -26,7 +26,7 @@
 					<mainClass>storm.ManualScheduler</mainClass>
 				</manifest>
 			</archive>
-			<finalName>scheduler</finalName>
+			<finalName>but-scheduler</finalName>
 			<appendAssemblyId>true</appendAssemblyId>
 		</configuration>
 	</plugin>
