--- a/webstorm/pom.xml
+++ b/webstorm/pom.xml
@@ -70,7 +70,7 @@
 	</build>
 
 	<dependencies>
-	    <dependency>
+		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 			<version>1.7.2</version>
@@ -176,5 +176,10 @@
 			<artifactId>layout</artifactId>
 			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>cz.vutbr.fit.monitoring</groupId>
+			<artifactId>Monitoring</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		  </dependency>
 	</dependencies>
 </project>
